idf_component_register(SRCS "main.c"
                            "study_timer.cpp"
                            "sys_lib.cpp"
                            "wps.cpp"
                            "lcd_lib.cpp"
                            "sova.cpp"
                            "telemetry_upload_main.cpp"
                    INCLUDE_DIRS ".")
