idf_component_register(SRCS "main.c"
                            "study_timer.cpp"
                            "sys_lib.cpp"
                            "wifi.cpp"
                            "lcd_lib.cpp"
                            "sova.cpp"
                            "telemetry_upload_main.cpp"
                            "ntp.cpp"
                            "gpio.cpp"
                    INCLUDE_DIRS ".")
